--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A module to keep track of asynchronous dependencies and communicate their status with the rest of the application.",
   "main": "index.js",
   "scripts": {
-    "test": "node test"
+    "test": "node test/fail.integration.js && node test/pass.integration.js"
   },
   "repository": {
     "type": "git",
